--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -27,8 +27,11 @@
         </ul>
     </div>
 </nav>
-<div class="container">
-    <div class="starter-template" layout:fragment="content"></div>
+<div class="container mx-4">
+    <div class="starter-template" layout:fragment="content">
+        <h1 class="text-dark">Bienvenido a TuFurniture</h1>
+        <img src="images/logo.png" width="420" height="380">
+    </div>
 </div><!-- /.container -->
 <footer th:fragment="footer">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
