--- a/src/main/resources/templates/users/editUser.html
+++ b/src/main/resources/templates/users/editUser.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<div class="row">
+<div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h3>
       <a href="/VidicDaliborkaMiAli/users" class="btn btn-primary"><span class="glyphicon glyphicon-list"></span> Usuarios</a>
