--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -6,7 +6,7 @@
   <title>Editar Producto</title>
 </head>
 <body>
-<div class="row">
+<div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h3>
       <a href="/VidicDaliborkaMiAli/products" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list"></span>Productos</a>
