--- a/src/main/resources/templates/products/products.html
+++ b/src/main/resources/templates/products/products.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<div class="row">
+<div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h3>
       <a th:href="@{/createProduct}" class="btn btn-primary"><span class="glyphicon glyphicon-plus-sign"></span>Crea un producto</a>
     </h3>
-    <h2>Product List</h2>
+    <h2>Lista de productos</h2>
     <div class="table-responsive">
       <table class="table" id="product-table">
         <thead>
@@ -27,7 +27,8 @@
         <tr th:each="product : ${products}">
           <td><a th:text="${product.getProductName()}" th:href="@{'products/showProduct/' + ${product.getProductId()}}"></a></td>
           <td th:text="${product.getProductPrice()}"></td>
-          <td th:text="${product.getProductPicture()}"></td>
+          <td><img th:src="'images/'+${product.getProductPicture()}"/></td>
+          <td th:text="${product.getProductStock()}"></td>
         </tr>
         </tbody>
       </table>
