--- a/src/main/resources/templates/users/createUser.html
+++ b/src/main/resources/templates/users/createUser.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<div class="row">
+<div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h2>Crear Usuario</h2>
     <form th:action="@{/saveUser}" method="post">
@@ -19,7 +19,7 @@
         <label>Password</label>
         <input type="password" class="form-control" name="password" />
       </div>
-      <button type="submit" class="btn btn-success">Save</button>
+      <button type="submit" class="btn btn-success">Guardar</button>
     </form>
   </div>
 </div>
