--- a/src/main/resources/templates/users/showUser.html
+++ b/src/main/resources/templates/users/showUser.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<div class="row">
+<div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h3>
       <a href="/VidicDaliborkaMiAli/users" class="btn btn-primary"><span class="glyphicon glyphicon-list"></span> Usuarios</a>
@@ -15,7 +15,7 @@
     <h2 th:text="${user.getUserName()}"></h2>
     <form th:action="@{/deleteUser}">
       <input type="hidden" name="id" th:value="${user.getId()}" />
-      <h2><input type="submit" class="btn btn-danger" value="Delete" onclick="return confirm('Are you sure?');" />
+      <h2><input type="submit" class="btn btn-danger" value="Borrar" onclick="return confirm('Seguro?');" />
         <a th:href="@{'editUser/' + ${user.getId()}}" class="btn btn-warning">Editar</a></h2>
     </form>
   </div>
