--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<div class="row">
+<div class="row mx-4">
     <div class="col-xs-8 col-md-8">
         <h3>
             <a th:href="@{/createUser}" class="btn btn-primary"><span class="glyphicon glyphicon-plus-sign"></span> Crea un usuario</a>
@@ -20,13 +20,11 @@
                 <thead>
                 <tr>
                     <th>Nombre</th>
-                    <th>Password</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="user : ${user}">
                     <td><a th:text="${user.getUserName()}" th:href="@{'users/showUser/' + ${user.getId}}"></a></td>
-                    <td th:text="${user.password}"></td>
                 </tr>
                 </tbody>
             </table>
