Vamos a por las provincias

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,6 +5,7 @@
     <title>Cuack</title>
 </head>
 <body>
-<h1>UPSSSS ERRORRRRRRRRRRRRRRRR CONTACTE CON ALGUIEN DE ASIR</h1>
+<h1 style="color: red;">UPSSSS ERRORRRRRRRRRRRRRRRR</h1>
+<p>CONTACTE CON ALGUIEN DE ASIR</p>
 </body>
 </html>
