--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -11,26 +11,26 @@
     <h3>
       <a href="/VidicDaliborkaMiAli/products" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list"></span>Productos</a>
     </h3>
-    <h2>Edit Product</h2>
+    <h2>Editar Producto</h2>
     <form th:action="@{/updateProduct}" method="post">
       <div class="form-group">
-        <label>Product Name:</label>
+        <label>Nombre de producto:</label>
         <input type="text" class="form-control" name="prodName" th:value="${prodName}" />
       </div>
       <div class="form-group">
-        <label>Product Price</label>
-        <input type="number" class="form-control" name="prodPrice" th:value="${prodPrice}" />
+        <label>Precio</label>
+        <input type="number" class="form-control"  name="prodPrice" th:value="${prodPrice}" />
       </div>
       <div class="form-group">
-        <label>Product Image URL:</label>
-        <input type="url" class="form-control" name="prodImage" th:value="${prodImage}" />
+        <label>Sube el link de la foto:</label>
+        <input type="text" class="form-control" name="prodImage" th:value="${prodImage}" />
       </div>
       <div class="form-group">
-        <label>Product Stock</label>
+        <label>Stock del producto</label>
         <input type="number" class="form-control" name="prodStock" th:value="${prodStock}" />
       </div>
       <input type="hidden" name="id" th:value="${product.getProductId()}" />
-      <button type="submit" class="btn btn-success">Save</button>
+      <button type="submit" class="btn btn-success">Guardar</button>
     </form>
   </div>
 </div>
