--- a/src/main/resources/templates/products/products.html
+++ b/src/main/resources/templates/products/products.html
@@ -7,13 +7,11 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<select class="form-control" id="dropDownList" >
-  <option th:each="provincia : ${provincias}" th:value="${provincia.getNombre()}" th:text="${provincia.getNombre()}"></option>
-</select>
+
 <div class="row mx-4">
   <div class="col-xs-8 col-md-8">
     <h3>
-      <a th:href="@{/createProduct}" class="btn btn-primary"><span class="glyphicon glyphicon-plus-sign"></span>Crea un producto</a>
+      <a th:href="@{createProduct}" class="btn btn-primary"><span class="glyphicon glyphicon-plus-sign"></span>Crea un producto</a>
     </h3>
     <h2>Lista de productos</h2>
     <div class="table-responsive">
@@ -39,4 +37,21 @@
   </div>
 </div>
 </body>
+<script>
+
+const DOM = {
+    selecCateg: document.getElementsByClassName('munis'),
+  }
+
+function changeMunicipio(){
+    var provincia;
+    provincia =
+    municipios.forEach(element => {
+        optionR = document.createElement("option");
+        optionR.setAttribute("th:each",`municipio :${municipios}`);
+        optionR.textContent=`${element.nombre}`;
+        DOM.selecCateg[0].appendChild(optionR);
+      })
+}
+  </script>
 </html>
