--- a/src/main/resources/templates/products/createProduct.html
+++ b/src/main/resources/templates/products/createProduct.html
@@ -7,13 +7,6 @@
 </head>
 <body>
 <header th:replace="layouts/header::header"></header>
-<form name="filtro">
-  <select class="form-control pro" id="provin" name="provinId">
-    <option th:each="provincia : ${provincias}" th:value="${provincia.getId()}" th:text="${provincia.getNombre()}"></option>
-  </select>
-  <select class="form-control" id="munis" name="Municipio" >
-  </select>
-</form>
 <div class="row mx-4">
   <div class="m-4 col-xs-8 col-md-8">
     <h2>Crear Producto</h2>
@@ -31,6 +24,14 @@
         <input type="number" class="form-control" name="prodStock" />
       </div>
       <div class="form-group">
+        <label>Municipio</label>
+          <select class="form-control pro" id="provin" name="provinId">
+            <option th:each="provincia : ${provincias}" th:value="${provincia.getId()}" th:text="${provincia.getNombre()}"></option>
+          </select>
+          <select class="form-control" id="munis" name="prodMun" >
+          </select>
+      </div>
+      <div class="form-group">
         <label>Sube el link:</label>
         <input type="text" class="form-control" name="prodImage" />
       </div>
@@ -40,8 +41,6 @@
 </div>
 </body>
 <script>
-
-
   const DOM = {
     selecCateg: document.getElementById('munis'),
     prov: document.getElementById("provin")
@@ -68,11 +67,8 @@
           optionR.value = element.id;
           optionR.textContent= element.nombre;
           DOM.selecCateg.appendChild(optionR);
-          });
+         });
       }
-
-
-
 </script>
 </html>
 
