--- a/src/main/resources/templates/products/editProduct.html
+++ b/src/main/resources/templates/products/editProduct.html
@@ -29,7 +29,7 @@
         <label>Stock del producto</label>
         <input type="number" class="form-control" name="prodStock" th:value="${prodStock}" />
       </div>
-      <input type="hidden" name="id" th:value="${product.getProductId()}" />
+      <input type="hidden" name="id" th:value="${product.getId()}" />
       <button type="submit" class="btn btn-success">Guardar</button>
     </form>
   </div>
