--- a/src/main/resources/templates/products/showProduct.html
+++ b/src/main/resources/templates/products/showProduct.html
@@ -9,16 +9,17 @@
 <header th:replace="layouts/header::header"></header>
 <div class="row mx-4">
   <div class="col-xs-8 col-md-8">
+    <div class="card h-100"></div>
     <h2 th:text="${product.getProductName()}"></h2>
-    <h2><img th:src="'../../images/'+${product.getProductPicture()}" width="200" /></h2>
+    <img th:src="'../../images/'+${product.getProductPicture()}" width="200" />
     <dl class="list">
       <dt>Product Price</dt>
       <dd th:text="${product.getProductPrice()}"></dd>
     </dl>
     <form th:action="@{/deleteProduct}">
-      <input type="hidden" name="id" th:value="${product.getProductId()}" />
+      <input type="hidden" name="id" th:value="${product.getId()}" />
       <h2><input type="submit" class="btn btn-danger" value="Borrar" onclick="return confirm('Seguro?');" />
-        <a th:href="@{'editProduct/' + ${product.getProductId}}" class="btn btn-warning">Editar</a></h2>
+        <a th:href="@{'editProduct/' + ${product.getId}}" class="btn btn-warning">Editar</a></h2>
     </form>
   </div>
 </div>
